Recepcionar GUI:
	- dodao metode clearFieds() kod nekih tabova za resetovanje polja za
unos